2011-02-28  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dmcsc.cpp: Write result even in non-debug mode.

	* src/dyndmcs/DynamicConfiguration.cpp: Run in non-inequality
	atoms mode.

	* include/generator/DynRakeTopoGenerator.h: Make it more sparse.

	* include/generator/DynGridTopoGenerator.h: Generate diagonal
	edges.

	* include/network/NeighborThread.h: Remove nip_thread.

	* include/network/NeighborOut.h: Fix memory leaks.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/network/RouterThread.h: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.

2011-02-22  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/generator/DynGridTopoGenerator.h: Add more edges to
	guarantee results.

	* include/generator/DynRakeTopoGenerator.h: Update Rake topo with
	more back edges. Change some randomize parameters.

2011-02-21  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dmcsc.cpp: No instantiation for now.

	* src/generator/dynGen.cpp: Fix some paths.

	* include/dyndmcs/DynamicConfiguration.h: Check for duplication,
	to enforce inequalities.
	* src/dyndmcs/DynamicConfiguration.cpp: Likewise.

	* include/dyndmcs/ContextSubstitution.h: Add order by ctx_term.
	* include/dyndmcs/Match.h: Likewise.

	* include/dyndmcs/BaseSortingStrategy.h: Fix heuristics order.

2011-02-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/AsynClient.tcc: Allow for changing k between sessions.
	* include/network/AsynClient.h: Likewise.
	* include/network/NeighborOut.h: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/Handler.h: Likewise.
	* src/dmcsc.cpp: Likewise.

2011-02-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/run-dyn.sh: Add dynamic dmcs runner.

2011-02-08  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/OutputThread.h: Quickly sort & unique result
	before return.
	* src/network/OutputThread.cpp: Likewise.
